--- a/k8s/globo-seq.yml
+++ b/k8s/globo-seq.yml
@@ -21,6 +21,10 @@ spec:
         env:
         - name: ACCEPT_EULA
           value: "Y"        
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "200m"  
 ---
 apiVersion: v1
 kind: Service
